like Zoinks, added the block class where I did not need it!

--- a/passwordvalidity.html
+++ b/passwordvalidity.html
@@ -10,12 +10,11 @@
         <header>
             <h1>HTML5 Password Constraint Validation Demo</h1>
             <nav>
-        <a href="inputtypes.html" class="block-item-large">Input Types</a>
-        <a href="inputstyling.html" class="block-item-large">Input Styles</a>
-        <a href="contraintvalidation.html" class="block-item-large">Constraint Validation</a>
-        <a href="dynamicdatalist.html" class="block-item-large">Dynamic DataList</a>
-        <a href="passwordvalidity.html" class="block-item-large">Password Validity</a>
-
+                <a href="inputtypes.html">Input Types</a>
+                <a href="inputstyling.html">Input Styling</a>
+                <a href="contraintvalidation.html">Constraint Validation</a>
+                <a href="dynamicdatalist.html">Data List</a>
+                <a href="passwordvalidity.html">Password Validity</a>
             </nav>
         </header>
         <section>
